mejoras de imagenes, reduccion de peso

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           <div class="col l12">
             <p>Hola, <i>¡Soy Carlos!</i> Viviendo en <b>Venezuela</b> desde la Fabrica de ideas. Tengo 8 años en el mundo de la informática y programación.</p>
 
-            <p>Estuve involucrado en algunos proyectos web y algunos otros de escritorio, aun pienso que soy un novato, pero tratando de mejorar cada día. Poseo altos conocimientos en <b>QA/QC, Projetc Manager</b>, manejo de repositorios, creación de aplicaciones web, plataformas online y estructuración de datos.</p>
+            <p>Estuve involucrado en algunos proyectos web y algunos otros de escritorio, aun pienso que soy un novato, pero tratando de mejorar cada día. Poseo altos conocimientos en <b>QA/QC, Project Manager</b>, manejo de repositorios, creación de aplicaciones web, plataformas online y estructuración de datos.</p>
 
             <p>Como desarrollador me especializo en el <b>Frontend</b>, queriendo aprender a diario al paso de las nuevas tecnologías.</p>
 
-            <p>Creyendo diariamente en el liderazgo, las imposiciones y los mandatos creo que son para la vida militar, teniendo en claro que las decisiones de un equipos de trabajo son en <b>equipo</b> y no de una sola persona, mas que en jefes y empleados creo en <b>compañeros</b> y muy importante, <b>hay que delegar</b>, existen personas que hacen tu trabajo, mejor que tu, mas rápido, mas eficiente y la mayoría son jóvenes de 18años.</p>
+            <p>Creyendo diariamente en el liderazgo, las imposiciones y los mandatos creo que son para la vida militar, teniendo en claro que las decisiones de un equipo de trabajo son en <b>equipo</b> y no de una sola persona, mas que en jefes y empleados creo en <b>compañeros</b> y muy importante, <b>hay que delegar</b>, existen personas que hacen tu trabajo, mejor que tu, mas rápido, mas eficiente y la mayoría son jóvenes de 18años.</p>
           </div>
          </div>
           <div class="col l12">
@@ -116,7 +116,7 @@
       <div class="footer-copyright grey darken-3">
         <div class="container">
         © 2017 Copyright Carlos Velazquez
-        <a href="#!"class="grey-text text-lighten-4 right" onclick="Materialize.toast('Dije QUIZA', 3000, 'rounded')">Quiza puedas ir arriba <i class="fa fa-chevron-up"></i></a>
+        <a href="#!"class="grey-text text-lighten-4 right" onclick="Materialize.toast('Dije Quizá', 3000, 'rounded')">Quizá puedas ir arriba <i class="fa fa-chevron-up"></i></a>
         </div>
       </div>
     </footer>
