--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <div class="container">
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#!">Sobre Mi</a></li>
-          <li><a href="page/portafolio.html">Portafolio</a></li>
-          <li><a href="page/resumen.html">Resumen</a></li>
+          <li><a href="#!" onclick="Materialize.toast('¡Ya estas aquí!', 2000)">Sobre Mi</a></li>
+          <li><a href="page/portafolio.html#portafolio">Portafolio</a></li>
+          <li><a href="page/resumen.html#resumen">Resumen</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-          <li><a href="#!">Sobre Mi</a></li>
-          <li><a href="page/portafolio.html">Portafolio</a></li>
-          <li><a href="page/resumen.html">Resumen</a></li>
+          <li><a href="#!" onclick="Materialize.toast('¡Ya estas aquí!', 2000)">Sobre Mi</a></li>
+          <li><a href="page/portafolio.html#portafolio">Portafolio</a></li>
+          <li><a href="page/resumen.html#resumen">Resumen</a></li>
         </ul>
         </div>
       </div>
@@ -80,7 +80,7 @@
             <div class="col m12 l6">
               <div class="card blue darken-4 z-depth-5">
                 <div class="card-content white-text">
-                  <span class="card-title">Mi Portafolio <a href="page/portafolio.html"><i class="fa fa-link fa-fw"></i></a></span>
+                  <span class="card-title">Mi Portafolio <a href="page/portafolio.html#portafolio"><i class="fa fa-link fa-fw"></i></a></span>
                   <p>Mira mis últimos desarrollos, enterate que tecnologías fueron usadas y mira el sitio funcional.</p>
               </div>
               </div>
@@ -88,7 +88,7 @@
             <div class="col m12 l6">
               <div class="card blue darken-4 z-depth-5">
                 <div class="card-content white-text">
-                  <span class="card-title">Resumen y Experiencia <a href="page/resumen.html"><i class="fa fa-link fa-fw"></i></a></span>
+                  <span class="card-title">Resumen y Experiencia <a href="page/resumen.html#resumen"><i class="fa fa-link fa-fw"></i></a></span>
                   <p>Cuales es mi experiencia laboral, donde he trabajado y mis skill generales.</p>
               </div>
               </div>
@@ -104,7 +104,7 @@
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">Informacion</h5>
-            <p class="grey-text text-lighten-4">Esta pagina esta desarrollada con  <span class="chip blue white-text">HTML5</span>, <span class="chip blue white-text">CSS3</span><span class="chip blue white-text">JavaScript</span><span class="chip blue white-text">Materialize</span> y <span class="chip blue white-text">Bower</span> y esta el <span class="chip blue white-text">Github</span></p>
+            <p class="grey-text text-lighten-4">Esta pagina esta desarrollada con  <span class="chip blue white-text">HTML5</span>, <span class="chip blue white-text">CSS3</span><span class="chip blue white-text">JavaScript</span><span class="chip blue white-text">Materialize</span><span class="chip blue white-text">Bower</span> y esta el <span class="chip blue white-text">Github</span></p>
             <p class="grey-text text-lighten-4 center">Por ahora no usamos galletas <i class="material-icons tiny">thumb_up</i></p>
           </div>
           <div class="col l4 offset-l2 s12">
@@ -120,9 +120,9 @@
         </div>
       </div>
       <div class="footer-copyright grey darken-3">
-        <div class="container">
+        <div class="container center">
         © 2017 Copyright Carlos Velazquez
-        <a href="#!"class="grey-text text-lighten-4 right" onclick="Materialize.toast('Dije Quizá', 3000, 'rounded')">Quizá puedas ir arriba <i class="fa fa-chevron-up"></i></a>
+        <a href="#!"class="grey-text text-lighten-4 right display" onclick="Materialize.toast('Dije Quizá', 3000, 'rounded')">Quizá puedas ir arriba <i class="fa fa-chevron-up"></i></a>
         </div>
       </div>
     </footer>
