--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Pagin Persosal de Carlos Velazquez desarrollador web y project manager">
     <meta name="robots" content="html5, html, css3, css, js, javascript, jquery, base de datos, sql, diseño web, desarrollo web, desarrollo de aplicacion, responsive desing, diseño grafico">
-    <!--Import Google Icon Font-->
     <link rel="stylesheet" type="text/css" href="esset/css/_principal.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <!--Import materialize.css-->
-    <link rel="stylesheet" type="text/css" href="bower_components/materialize/bin/materialize.css">
-    <!--Let browser know website is optimized for mobile-->
   </head>
   <body>
     <div id="header" class="">
@@ -95,9 +90,7 @@
             </div>
           </div>
           </div>
-
       </div>
-
     </div>
     <footer class="page-footer grey darken-4">
       <div class="container">
@@ -120,16 +113,16 @@
         </div>
       </div>
       <div class="footer-copyright grey darken-3">
-        <div class="container center">
+        <div class="container">
         © 2017 Copyright Carlos Velazquez
-        <a href="#!"class="grey-text text-lighten-4 right display" onclick="Materialize.toast('Dije Quizá', 3000, 'rounded')">Quizá puedas ir arriba <i class="fa fa-chevron-up"></i></a>
+        <a href="#!" class="grey-text text-lighten-4 right display" onclick="Materialize.toast('Dije Quizá', 3000, 'rounded')">Quizá puedas ir arriba <i class="fa fa-chevron-up"></i></a>
         </div>
       </div>
     </footer>
-    <!--Import jQuery before materialize.js-->
+    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/materialize/bin/materialize.min.css">
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/materialize/bin/materialize.js"></script>
     <script src="esset/js/file.js"></script>
-
   </body>
 </html>
