--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a onclick="Materialize.toast('User Slack: cevs', 4000)" class="btn-floating blue darken-4"><i class="fa fa-slack"></i></a></li>
           </ul>
         </div>
-        <a href="#!" class="btn waves-effect waves-light blue-grey ">Project Manager / Frontend Developer</a>
+        <a href="#!" class="btn waves-effect waves-light blue-grey ">Python Developer</a>
       </div>
     </div>
     <nav>
@@ -55,17 +55,17 @@
       <div class="title-page">
       <i class="material-icons medium right blue-text text-darken-2 text-sombra">perm_identity</i>
       <h2 class="blue-text text-darken-4">Sobre Mi</h2>
-      <p class="grey-text">Mi experiencia y lo que se hacer, tratando de no sufrir del sindrome ¡Lo vi una vez y ya soy experto!.</p>
+      <p class="grey-text">Mi experiencia y lo que sé hacer, tratando de no sufrir del síndrome ¡Lo vi una vez y ya soy experto!.</p>
       </div>
         <div class="row about">
           <div class="col l12">
             <p>Hola, <i>¡Soy Carlos!</i> Viviendo en <b>Venezuela</b> desde la Fabrica de ideas. Tengo 8 años en el mundo de la informática y programación.</p>
 
-            <p>Estuve involucrado en algunos proyectos web y algunos otros de escritorio, aun pienso que soy un novato, pero tratando de mejorar cada día. Poseo altos conocimientos en <b>QA/QC, Project Manager</b>, manejo de repositorios, creación de aplicaciones web, plataformas online y estructuración de datos.</p>
+            <p>Estoy involucrado en algunos proyectos web y algunos otros de escritorio, aun pienso que soy un novato, pero tratando de mejorar cada día. Poseo conocimientos en el desarrollo de aplicaciones web de alto nivel</p>
 
-            <p>Como desarrollador me especializo en el <b>Frontend</b>, queriendo aprender a diario al paso de las nuevas tecnologías.</p>
+            <p>Como desarrollador me especializo en el <b>backend</b>, queriendo aprender a diario al paso de las nuevas tecnologías.</p>
 
-            <p>Creyendo diariamente en el liderazgo, las imposiciones y los mandatos creo que son para la vida militar, teniendo en claro que las decisiones de un equipo de trabajo son en <b>equipo</b> y no de una sola persona, mas que en jefes y empleados creo en <b>compañeros</b> y muy importante, <b>hay que delegar</b>, existen personas que hacen tu trabajo, mejor que tu, mas rápido, mas eficiente y la mayoría son jóvenes de 18años.</p>
+            <p>Creyendo diariamente en el liderazgo, las imposiciones y los mandatos creo que fueron para otros tiempos. Piens que las decisiones de un equipo de trabajo son del <b>equipo</b> y no de una sola persona, mas que en jefes y empleados creo en compañeros y muy importante, hay que delegar existen personas que hacen tu trabajo mejor que tu, mas rápido, mas eficiente.</p>
           </div>
          </div>
           <div class="col l12">
